[package]
name = "rgit"
version = "0.1.0"
authors = ["Marcin Twardak <twardakm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
log = "0.4"
simple_logger = "1"
walkdir = "2"
tempfile = "3"
git2 = "0.13"
dirs = "3"
termion = "1"
